[package]
name = "db_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
names = { version = "0.14.0", default-features = false }
rusqlite = {version= "0.31.0", features = ["bundled"] }
thiserror = "1.0.61"
